--- a/about.html
+++ b/about.html
@@ -18,7 +18,7 @@
 </nav>
  
    
-    <p>fhijdbghjdbghfbshbshgbhsfbufhsghusdbfvhsbhuruhfgbhusdfbufhgbshfbghguhhgbsfhugdsuhkbfuhsgbuhsbgr</p>
+    <p>Here my about details are present</p>
   
 </body>
 <footer>Copyright © vishal. All Rights Reserved</footer>
