--- a/about.html
+++ b/about.html
@@ -18,8 +18,7 @@
 </nav>
  
    
-    <p>Here my about details will be there.</p>
-  
+    <p>Here my about details.</p>
 </body>
 <footer>Copyright © vishal. All Rights Reserved</footer>
 
