--- a/about.html
+++ b/about.html
@@ -18,7 +18,7 @@
 </nav>
  
    
-    <p>Here my about details!</p>
+    <p>Here my about details! Regarding my intrestes and education.</p>
 </body>
 <footer>Copyright © vishal. All Rights Reserved</footer>
 
