--- a/achievement.html
+++ b/achievement.html
@@ -16,17 +16,17 @@
  <header>
 
         <div class="header">
-           <h1><b><i>SKILLS</i></b></h1>
+           <h1><b><i>ACHIEVEMENTS</i></b></h1>
         </div>
 
         <div class="topnav">
             <nav class="main-nav">
             <a href="index.html">Home</a>
             <a href="about.html">About</a>
-            <a class="active" href="skill.html">Skills</a>
+            <a href="skill.html">Skills</a>
             <a href="education.html">Education</a>
             <a href="blog.html">Blog</a>
-            <a href="achievement.html">Achievement</a>
+            <a class="active"  href="achievement.html">Achievement</a>
             </nav>
 
         </div>  
