--- a/about.html
+++ b/about.html
@@ -30,13 +30,31 @@
         </div>  
     </header>  
  
-   
-    <p>Here my about details! Regarding my intrestes and education.</p>
+   <main>
+
+    <div class="card">
+        <img src="about.jpg" alt="about">
+        <div class="card2">
+          <h4 style="text-align: center; color:rgba(44, 44, 44, 0.89);"><b>Vishal Bidarkar</b></h4> 
+          <p style="text-align: center; color:rgba(44, 44, 44, 0.89);">Developer</p> 
+        </div>
+      </div>
+
+      <div class="about">
+       <p>I’m a passion-driven person.My greatest strengths are my dedication towards my work, my ability to lead,
+           my management skills,curious mindset and encouraging team-work.
+            I take part in every event possible to prove myself and improve my skills to expand my knowledge.
+       </p>
+
+
+      </div>
+
+   </main>
 
 
 
 
-</body>
+
 
 
 
@@ -59,5 +77,5 @@
     <h5>Copyright © vishal. All Rights Reserved.</h5>
     
    </footer>
-
+</body>
 </html>
