--- a/achievement.html
+++ b/achievement.html
@@ -5,6 +5,7 @@
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <link rel="stylesheet" href="main.css">
+        <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/css/bootstrap.min.css">
     </head>
 
 
@@ -32,13 +33,23 @@
         </div>  
     </header>  
 
- 
-<ul type = "disc">
-    <li>Python</li>
-    <li>Java</li>
-    <li>Computer networks</li>
-    <li>Cyber security</li>
- </ul>
+
+
+
+
+<main>
+
+    
+
+
+
+</main>
+
+
+
+
+
+
 
 </body>
 
