--- a/blog.html
+++ b/blog.html
@@ -32,10 +32,39 @@
         </div>  
     </header>  
 
- 
-   <h1>This is my Blog page, i write here my personal experiences and stuff about Tech and Cyber security.</h1>
-    
-</body>
+ <main>
+
+
+
+    <div class="flip-card">
+        <div class="flip-card-inner">
+          <div class="flip-card-front">
+            <img src="phish.jpg" alt="blog" style="width:300px;height:300px;">
+          </div>
+          <div class="flip-card-back">
+            <h1>Know more About Phishing</h1> 
+            <a href="blog1.html" target="_blank">Read more</a>
+          </div>
+        </div>
+      </div>
+
+
+      <div class="flip-card second">
+        <div class="flip-card-inner">
+          <div class="flip-card-front">
+            <img src="sql.jpg" alt="blog" style="width:300px;height:300px;">
+          </div>
+          <div class="flip-card-back">
+            <h1>Know more about SQL Injection</h1> 
+            <a href="blog2.html" target="_blank">Read more</a>
+          </div>
+        </div>
+      </div>
+
+
+ </main>
+   
+
 
 <footer class="main-footer">
     <h2>Connect</h2>
@@ -55,4 +84,5 @@
     <h5>Copyright © vishal. All Rights Reserved.</h5>
     
    </footer>
+</body>
 </html>
