--- a/education.html
+++ b/education.html
@@ -35,12 +35,42 @@
 
 
 
-<ul type = "disc">
-   <li>B.tech: Aurora's Technological Research Institute</li>
-   <li>Intermediate: Narayana Junior College</li>
-   <li>School: Brilliant Grammer High School</li>
-   </ul>
-</body>
+    <main>
+        <div class="edutable">
+        <table>
+            <thead>
+              <tr>
+                <th>Sl.no</th>
+                <th>Name Of Institution</th>
+                <th>Grades</th>
+                <th>Year</th>
+              </tr>
+            </thead>
+            <tbody>
+              <tr>
+                <td>1.</td>
+                <td>Aurora's Technological and Research Institute</td>
+                <td>58%</td>
+                <td>2020</td>
+              </tr>
+               <tr>
+                <td>2.</td>
+                <td>Narayana Junior COllege</td>
+                <td>81%</td>
+                <td>2015</td>
+              </tr>
+               <tr>
+                <td>3.</td>
+                <td>Brilliant Grammar High School</td>
+                <td>75%</td>
+                <td>2013</td>
+              </tr>
+            </tbody>
+          </table>
+
+        </div>
+
+    </main>
 
 
 
