--- a/skill.html
+++ b/skill.html
@@ -32,15 +32,37 @@
         </div>  
     </header>  
 
- 
-<ul type = "disc">
-    <li>Python</li>
-    <li>Java</li>
-    <li>Computer networks</li>
-    <li>Cyber security</li>
- </ul>
 
-</body>
+<main>
+
+    <p class="cl">Python</p>
+    <div class="container">
+      <div class="skills python">60%</div>
+    </div>
+
+    <p class="cl">Android Development</p>
+    <div class="container">
+      <div class="skills android">40%</div>
+    </div>
+
+    <p class="cl">C Lang</p> 
+    <div class="container">
+      <div class="skills c">80%</div>
+    </div>
+
+    <p class="cl">Ethical Hacking</p>
+    <div class="container">
+      <div class="skills hack">70%</div>
+    </div>
+
+
+
+
+
+</main>
+
+
+
 
 <footer class="main-footer">
     <h2>Connect</h2>
@@ -60,4 +82,6 @@
     <h5>Copyright © vishal. All Rights Reserved.</h5>
     
    </footer>
+
+</body>
 </html>
