--- a/index.html
+++ b/index.html
@@ -8,8 +8,11 @@
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <link rel="stylesheet" href="main.css">
+        
 
     </head>
+
+    
 
 <body>
 
@@ -26,7 +29,7 @@
             <a href="skill.html">Skills</a>
             <a href="education.html">Education</a>
             <a href="blog.html">Blog</a>
-            <a href="contact.html">Contact</a>
+            <a href="achievement.html">Achievement</a>
             </nav>
 
         </div>  
